--- a/assets/theme.css
+++ b/assets/theme.css
@@ -309,6 +309,7 @@ div.sidebar__footer > #AjaxCartSubtotal > div > div.uid-toggle-wrapper {
     border-radius: 15px;
     width: fit-content;
     font-size: 12px;
+    font-weight: 400;
     color: #ffffff;
     display: inline-block;
   }
