--- a/assets/custom-main.css
+++ b/assets/custom-main.css
@@ -364,11 +364,39 @@ div.sidebar__footer > #AjaxCartSubtotal > div > div.uid-toggle-wrapper {
   -moz-box-sizing: border-box;
   box-sizing: border-box;
 }
+@media only screen and (max-width: 750px) {
+  .custom-lg-6,
+  .custom-md-6 {
+    width: 100% !important;
+    display: block !important;
+  }
+  
+  .custom-tab-container {
+    flex-direction: column;
+  }
+  
+  .custom-tab {
+    width: 100% !important;
+    margin-left: 0 !important;
+    margin-right: 0 !important;
+  }
+}
+
 
 @media only screen and (max-width: 450px) {
   .custom-vs-12 {
     display: inline-block;
     width: 100%;
+  }
+
+  .custom-lg-6,
+  .custom-md-6 {
+    width: 100% !important;
+    display: block !important;
+  }
+
+  .custom-tab-container {
+    flex-direction: column;
   }
 
   .custom-icon {
@@ -417,19 +445,19 @@ div.sidebar__footer > #AjaxCartSubtotal > div > div.uid-toggle-wrapper {
 
   .custom-tab-wide {
     height: 350px;
-    width: calc(100% - 10vw);
+    width: 100% !important;
     margin-bottom: 5vw;
-    margin-left: 5vw;
-    margin-right: 5vw;
+    margin-left: 0 !important;
+    margin-right: 0 !important;
   }
 
   .custom-tab {
   padding-bottom: 40px;
   position: relative;
-    width: calc(100% - 10vw);
+    width: 100% !important;
     margin-bottom: 5vw;
-    margin-left: 5vw;
-    margin-right: 5vw;
+    margin-left: 0 !important;
+    margin-right: 0 !important;
   }
 
   .custom-tab-height-a {
