--- a/assets/custom-main.css
+++ b/assets/custom-main.css
@@ -354,7 +354,7 @@ div.sidebar__footer > #AjaxCartSubtotal > div > div.uid-toggle-wrapper {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   gap: 30px;
-  padding: 20px;
+  padding: 40px 20px 40px 20px;
   width: 100%;
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
@@ -362,6 +362,7 @@ div.sidebar__footer > #AjaxCartSubtotal > div > div.uid-toggle-wrapper {
   font-family: "Avenir Next Rounded", sans-serif;
   font-size: 14px;
   overflow: hidden;
+  margin-top: -40px;
 }
 
 .custom-attributes {
@@ -386,7 +387,7 @@ div.sidebar__footer > #AjaxCartSubtotal > div > div.uid-toggle-wrapper {
 
 @media only screen and (max-width: 750px) {
   .custom-tab-container {
-    padding: 10px;
+    padding: 40px 20px 40px 20px;
   }
 
   .custom-parts-container th {
@@ -409,15 +410,15 @@ div.sidebar__footer > #AjaxCartSubtotal > div > div.uid-toggle-wrapper {
 
 @media only screen and (max-width: 450px) {
   .custom-tab-container {
-    padding: 10px;
+    padding: 40px 15px 40px 15px;
   }
 
   .custom-tab-container {
-    font-size: 11px;
+    font-size: 12px;
   }
 
   .custom-parts-container td {
-    max-width: 45vw;
+    max-width: 55vw;
   }
 }
 
